Updated a lot of things